samples/_failures_safe/1761484624_f16f3e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63d08dc6.c: In function ‘main’:
./samples/SAFE/__tmp_63d08dc6.c:141:5: error: expected declaration or statement at end of input
  141 |     if (!read_matrix_input(&mat2)) {
      |     ^~
./samples/SAFE/__tmp_63d08dc6.c:141:5: error: expected declaration or statement at end of input
